<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WishGift">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/titleAdd"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/giftName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="21dp"
        android:rotationX="0"
        android:text="@string/btnSubmit"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftPhoto" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/giftDescription"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="255dp"
        android:layout_height="29dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/btnImage"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/giftName"
        android:autofillHints="@string/giftName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="344dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/giftDescription"
        android:autofillHints="@string/giftDescription"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/giftPhoto"
        android:layout_width="289dp"
        android:layout_height="197dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/giftImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/no_image" />

</androidx.constraintlayout.widget.ConstraintLayout>